Added data in json.. Controller and routing logic fixed.

--- a/Front-End/View/index.html
+++ b/Front-End/View/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html ng-app="thesisMate">
+<html ng-app="onlineShopping">
 
 <head>
     <meta charset="UTF-8">
-    <title>Thesis Mate</title>
+    <title>Shopping Mate</title>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
     <script src="loginController.js"></script>
@@ -13,4 +13,5 @@
 <body>
 	<div ng-view/>
 </body>
+
 </html>
